<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alkitab Anak</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_nuh">homeNuh</string>
    <string name="title_activity_page1_nuh">page1_nuh</string>
    <string name="title_activity_page2_nuh">page2_nuh</string>
    <string name="text_page_one">Ada seorang yang taat kepada Tuhan. Ia bernama Nuh. Pada zaman Nuh, semua orang telah menjadi jahat sehingga Tuhan ingin memusnahkan mereka dengan Air Bah.</string>
    <string name="text_page_two">Tuhan memerintahkan Nuh agar membuat Bahtera untuk menyelamatkan keluarganya dari Air Bah. Istri, 3 anaknya (Sem, Ham, dan Yafet), serta 3 mantunya ikut masuk ke dalam Bahtera.</string>
    <string name="text_page_three">Para binatang juga diselamatkan. Setiap jenis berpasangan.</string>
    <string name="text_page_four">Hujan lebat turun selama 40 hari 40 malam. Semua makhluk di Bumi mati.</string>
    <string name="text_page_five">Setelah air surut, Nuh dan keluarga keluar dari Bahtera. Nuh memberi korban persembahan kepada Tuhan sebagai tanda ucapan syukur.</string>
    <string name="text_page_six">Tuhan tidak akan menghukum bumi dengan Air Bah lagi. Busur di langit sebagai tanda janji-Nya, yaitu Pelangi.</string>
    <string name="quiz_nuh_1">1.) Apakah yang dibuat oleh Nabi Nuh?</string>
    <string name="quiz_nuh_1_a">Bahtera</string>
    <string name="quiz_nuh_1_b">Kapal Selam</string>
    <string name="quiz_nuh_2">2.) Berapa lamakah hujan turun?</string>
    <string name="quiz_nuh_2_a">40 Hari 40 Malam</string>
    <string name="quiz_nuh_2_b">44 Hari 44 Malam</string>
    <string name="quiz_nuh_3">3.) Siapa saja nama anak-anak Nabi Nuh?</string>
    <string name="quiz_nuh_3_a">Sem, Ham, dan Yafet</string>
    <string name="quiz_nuh_3_b">Samuel, Hansel, dan Yohanes</string>
    <string name="quiz_nuh_4">4.) Apa tanda perjanjian Tuhan?</string>
    <string name="quiz_nuh_4_a">Pelangi</string>
    <string name="quiz_nuh_4_b">Hujan Lebat</string>
    <string name="quiz_daud_1">1.) Siapakah yang dikalahkan oleh Daud?</string>
    <string name="quiz_daud_1_a">Goliat</string>
    <string name="quiz_daud_1_b">Samuel</string>
    <string name="quiz_daud_2">2.) Apa pekerjaan Daud?</string>
    <string name="quiz_daud_2_a">Penggembala Domba</string>
    <string name="quiz_daud_2_b">Pedagang Domba</string>
    <string name="quiz_daud_3">3.) Daud diurapi oleh siapa?</string>
    <string name="quiz_daud_3_a">Nabi Samuel</string>
    <string name="quiz_daud_3_b">Nabi Nuh</string>
    <string name="quiz_daud_4">4.) Daud menjadi raja menggantikan siapa?</string>
    <string name="quiz_daud_4_a">Raja Saul</string>
    <string name="quiz_daud_4_b">Raja Salomo</string>
    <string name="title_activity_page3_nuh">page3_nuh</string>
    <string name="title_activity_page4_nuh">page4_nuh</string>
    <string name="title_activity_page5_nuh">page5_nuh</string>
    <string name="title_activity_page6_nuh">page6_nuh</string>
    <string name="title_activity_quiz_no1_nuh">quiz_no1_nuh</string>
    <string name="title_activity_quiz_no2_nuh">quiz_no2_nuh</string>
    <string name="title_activity_quiz_no3_nuh">quiz_no3_nuh</string>
    <string name="title_activity_quiz_no4_nuh">quiz_no4_nuh</string>
    <string name="title_activity_quiz_result_nuh">quiz_result_nuh</string>
    <string name="title_activity_page1_daud">page1_daud</string>
    <string name="text_daud_one">Daud adalah seorang penggembala domba yang berani. Singa pun dihajarnya demi melindungi dombanya.</string>
    <string name="text_daud_two">Daud juga seorang pemusik dan penyair yang hebat. Dia adalah orang yang suka memuji Tuhan dengan lagu pujiannya.</string>
    <string name="text_daud_three">Atas perintah Tuhan, Daud diurapi oleh Nabi Samuel untuk menjadi Raja menggantikan Raja Saul.</string>
    <string name="text_daud_four">Goliat, pendekar hebat bertubuh besar dari Filistin, menantang bangsa Israel untuk berkelahi.</string>
    <string name="text_daud_five">Tidak ada yang berani menghadapi tantangan Goliat. Tetapi, Daud yang bertubuh kecil melangkah maju melawan Goliat.</string>
    <string name="text_daud_six">Oleh karena campur tangan Tuhan, maka matilah Goliat oleh umban yang dilemparkan Daud kepadanya.</string>
    <string name="text_daud_seven">Daud menjadi raja atas bangsa Israel menggantikan Raja Saul.</string>
    <string name="title_activity_page2_daud">page2_daud</string>
    <string name="title_activity_page3_daud">page3_daud</string>
    <string name="title_activity_page4_daud">page4_daud</string>
    <string name="title_activity_page5_daud">page5_daud</string>
    <string name="title_activity_page6_daud">page6_daud</string>
    <string name="title_activity_page7_daud">page7_daud</string>
    <string name="title_activity_quiz_no1_daud">quiz_no1_daud</string>
    <string name="title_activity_quiz_no2_daud">quiz_no2_daud</string>
    <string name="title_activity_quiz_no3_daud">quiz_no3_daud</string>
    <string name="title_activity_quiz_no4_daud">quiz_no4_daud</string>
    <string name="title_activity_quiz_result_daud">quiz_result_daud</string>
    <string name="title_activity_home_daud">homeDaud</string>
    <string name="title_activity_splash_screen">splash_screen</string>

</resources>
