<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_quiz_no1"
    android:background="@drawable/quiz_bg_no1_daud"
    tools:context="com.example.dell.alkitabanak.quiz_no1_daud">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quiz_daud_1"
        android:padding="10dp"
        android:textSize="25dp"
        android:layout_marginLeft="37dp"
        android:id="@+id/textViewQuizSoalSatuDaud"
        android:layout_marginTop="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewQuizSoalSatuDaud"
        android:layout_alignLeft="@+id/textViewQuizSoalSatuDaud"
        android:layout_alignStart="@+id/textViewQuizSoalSatuDaud"
        android:layout_marginLeft="154dp"
        android:layout_marginStart="154dp"
        android:id="@+id/radioGroupSoalSatuDaud">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_daud_1_a"
            android:layout_marginBottom="5dp"
            android:textSize="25dp"
            android:id="@+id/radioButtonSoalSatuADaud" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_daud_1_b"
            android:textSize="25dp"
            android:id="@+id/radioButtonSoalSatuBDaud" />
    </RadioGroup>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton8"
        android:background="@drawable/panah_lanjut"
        android:onClick="onClickLanjut"
        android:layout_marginRight="65dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="65dp"
        android:layout_below="@+id/radioGroupSoalSatuDaud"
        android:layout_alignRight="@+id/radioGroupSoalSatuDaud"
        android:layout_alignEnd="@+id/radioGroupSoalSatuDaud" />

</RelativeLayout>
