<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_quiz_no3"
    android:background="@drawable/quiz_bg_no3_daud"
    tools:context="com.example.dell.alkitabanak.quiz_no3_daud">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/quiz_daud_3"
        android:padding="10dp"
        android:textSize="25dp"
        android:layout_marginLeft="37dp"
        android:id="@+id/textViewQuizSoalTigaDaud"
        android:layout_marginTop="70dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewQuizSoalTigaDaud"
        android:layout_alignLeft="@+id/textViewQuizSoalTigaDaud"
        android:layout_alignStart="@+id/textViewQuizSoalTigaDaud"
        android:layout_marginLeft="154dp"
        android:layout_marginStart="154dp"
        android:id="@+id/radioGroupSoalTigaDaud">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_daud_3_a"
            android:layout_marginBottom="5dp"
            android:textSize="25dp"
            android:id="@+id/radioButtonSoalTigaADaud" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_daud_3_b"
            android:textSize="25dp"
            android:id="@+id/radioButtonSoalTigaBDaud" />
    </RadioGroup>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton8"
        android:background="@drawable/panah_lanjut"
        android:onClick="onClickLanjut"
        android:layout_alignTop="@+id/imageButton9"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="44dp"
        android:layout_marginEnd="44dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton9"
        android:layout_marginTop="40dp"
        android:onClick="onClickKembali"
        android:background="@drawable/panah_kembali_arrow"
        android:layout_below="@+id/radioGroupSoalTigaDaud"
        android:layout_toLeftOf="@+id/imageButton8"
        android:layout_toStartOf="@+id/imageButton8" />

</RelativeLayout>
